--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   client-ci:
+    if: contains(github.event.pull_request.labels.*.name,${{'🎨 FE'}})
     name: client-ci
     runs-on: ubuntu-latest
     steps:
