--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   client-ci:
-    if: contains(github.event.pull_request.labels.*.name,${{'🎨 FE'}})
+    if: contains(github.event.pull_request.labels.*.name,'🎨 FE')
     name: client-ci
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +25,7 @@ jobs:
         npm run build
       
   server-ci:
-  if: contains(github.event.pull_request.labels.*.name,${{'💻 BE'}})
+    if: contains(github.event.pull_request.labels.*.name,'💻 BE')
     name: server-ci
     runs-on: ubuntu-latest
     steps:
