--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,6 @@ name: KittyMark CI
 on:
   pull_request:
     branches: [ "dev" ]
-# Down scope as necessary via https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
-permissions:
-  checks: write
-  contents: write
 
 jobs:
   client-ci:
@@ -16,9 +12,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-        with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
 
       - name: Set up Node
         uses: actions/setup-node@v2
@@ -29,14 +22,10 @@ jobs:
         working-directory: client
         run: |
           npm ci
+          npm run format-check
+          npm run lint
           npm run build
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
-
+  
   server-ci:
     if: contains(github.event.pull_request.labels.*.name,'💻 BE')
     name: server-ci
@@ -54,10 +43,6 @@ jobs:
         working-directory: server
         run: |
           npm ci
+          npm run format-check
+          npm run lint
           npm run build
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
